# TeoryGames

./: README.md  algos.py  matrix.txt  output.txt  pyproject.toml  test.py  test_algos.py
algos/: algos.py  minimax.py
application/: MainWindow.ui  atr.py  function_params_render.py  main.py  matix_render.py  matrix.py  ui_MainWindow.py  ui_add.py
application/addons/: algos.py  matrix.py
application/static/: style.qss
resources/: rs_test2_0.txt  rs_test2_1.txt  test_2.txt  test_3.txt
